--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/queries.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,6 +30,11 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -61,7 +67,7 @@
               </div>
             </div>
           </div>
-          <div class="hero-image-box">
+          <div class="hero-img-box">
             <img
               src="img/hero.png"
               class="hero-img"
@@ -427,11 +433,11 @@
 
         <div class="container grid grid--2-cols margin-bottom-md">
           <div class="pricing-plan pricing-plan--starter">
-            <div class="plan-header">
+            <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
               <p class="plan-text">Per month. That's just $13 per meal!</p>
-            </div>
+            </header>
             <ul class="list">
               <list class="list-item"
                 ><ion-icon class="list-icon" name="checkmark-outline"></ion-icon
