--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
-                <img src="/img/customers/customer-1.jpg" alt="Customer-photo" />
-                <img src="/img/customers/customer-2.jpg" alt="Customer-photo" />
-                <img src="/img/customers/customer-3.jpg" alt="Customer-photo" />
-                <img src="/img/customers/customer-4.jpg" alt="Customer-photo" />
-                <img src="/img/customers/customer-5.jpg" alt="Customer-photo" />
-                <img src="/img/customers/customer-6.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-1.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-2.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-3.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-4.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-5.jpg" alt="Customer-photo" />
+                <img src="img/customers/customer-6.jpg" alt="Customer-photo" />
               </div>
               <div class="delivered-text">
                 <span>250,000+</span> meals delivered last year!
@@ -130,7 +130,7 @@
           </div>
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-1.png"
+              src="img/app/app-screen-1.png"
               alt="iPhone app preferences selection screen"
               class="step-img"
             />
@@ -139,7 +139,7 @@
           <!-- STEP 02 -->
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-2.png"
+              src="img/app/app-screen-2.png"
               alt="iPhone app meal approving plan screen"
               class="step-img"
             />
@@ -167,7 +167,7 @@
           </div>
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-3.png"
+              src="img/app/app-screen-3.png"
               alt="iPhone app delivery screen"
               class="step-img"
             />
@@ -596,7 +596,7 @@
         <div class="logo-col">
           <a class="footer-logo" href="#">
             <img
-              src="/img/omnifood-logo.png"
+              src="img/omnifood-logo.png"
               alt="Omnifood logo"
               class="logo"
             />
